[gd_scene load_steps=11 format=3 uid="uid://cx5ur4di4l5at"]

[ext_resource type="Script" uid="uid://dwke1pq6k3qvp" path="res://Scripts/game_over.gd" id="1_0u5us"]
[ext_resource type="Script" uid="uid://cj36nau0ud63c" path="res://Scripts/Button/yes_button.gd" id="1_qomsq"]
[ext_resource type="Script" uid="uid://brhhsoussfjqr" path="res://Scripts/Button/no_button.gd" id="2_0u5us"]

[sub_resource type="Gradient" id="Gradient_hnfy4"]
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(0.403646, 0.0377572, 0.300815, 1, 0.773797, 0.493155, 0.657141, 1, 0.785887, 0.934214, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0u5us"]
gradient = SubResource("Gradient_hnfy4")
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xj6ph"]
texture = SubResource("GradientTexture2D_0u5us")
modulate_color = Color(0.289285, 0.537531, 0.947917, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evg8o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0u5us"]

[sub_resource type="LabelSettings" id="LabelSettings_evg8o"]
font_size = 40
outline_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_184ew"]
font_size = 20

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0u5us")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xj6ph")

[node name="NoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 108.0
offset_right = 269.0
offset_bottom = 165.0
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_right = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_evg8o")
text = "NO"
flat = true
script = ExtResource("1_qomsq")

[node name="ColorRect_Yes" type="ColorRect" parent="NoButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 38.0
offset_right = 50.0
offset_bottom = 40.0

[node name="YesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 108.0
offset_right = 204.0
offset_bottom = 165.0
focus_neighbor_left = NodePath("../NoButton")
focus_neighbor_right = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_0u5us")
text = "YES"
flat = true
script = ExtResource("2_0u5us")

[node name="ColorRect_No" type="ColorRect" parent="YesButton"]
layout_mode = 0
offset_left = 16.0
offset_top = 38.0
offset_right = 51.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -30.0
offset_top = 21.0
offset_right = 428.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
label_settings = SubResource("LabelSettings_evg8o")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -26.0
offset_top = 87.0
offset_right = 432.0
offset_bottom = 197.0
text = "PLAY AGAIN ?"
label_settings = SubResource("LabelSettings_184ew")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
